# COP3530-Project3

./: .gitignore  CMakeLists.txt  COP3530-Final.pro  README.md  csvreader.cpp  csvreader.h  location.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  sorter.cpp  sorter.h  sortingbuttons.cpp  sortingbuttons.h  table.cpp  table.h
